--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Mind Cloud</title>
     <!-- Connecting Bootstrap -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+	 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<!--<link rel="stylesheet" href="css/font-awesome/css/font-awesome.css">-->
     <!-- Input date range for selecting dates -->
